packages/cashc/test/compiler/ParseError/for_loop_non_assignment_update.cash
contract ForLoopNonAssignmentUpdate() {
    function spend() {
        for (int i = 0; i < 3; i + 1) {
            require(i < 3);
        }
    }
}
